@@ -1,8 +1,6 @@
 TODO/Bugs
 =========
 
- - Warn the user when a line reaches the maximum.
-
  - Configurable number of chars (-g without parameter).
  
  - Configurable character set used in the randomization.
@@ -23,3 +21,6 @@ TODO/Bugs
 
  - Store/backup automatically to S3? or maybe storage works like wal logs in pg
    and the user can define put and get commands?
+
+ - Don't use a buffer to read lines in the password file, assume
+   lines can have any length.
