@@ -5,6 +5,7 @@
 	* Quadruple and unify the maximum allowable line size.
 	* Configurable count of iteration when generating passwords.
 	* Fixed wide-char characters on Linux by compiling against ncursesw.
+	* Warn the user if a password line is too long and can't be parsed.
 
 0.2 Bertrand Janin <b@janin.com> (2013-05-03)
 
